--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,8 +1,8 @@
 # These are supported funding model platforms
 
 
-github: [GyulyVGC]
-custom: ['https://www.paypal.com/donate/?hosted_button_id=Y4NRT2SBP6K2N']
+github: [SurajRajYadav]
+custom: 
 patreon: Sniffnet
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
